# docs/api-docs.yaml
@@ -75,6 +75,12 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ApiErrorResponse"
+        "409":
+          description: Version conflict
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ApiErrorResponse"
     delete:
       tags:
       - task-controller
@@ -232,6 +238,7 @@ components:
           type: string
           description: "ID of the user, who is assigned to this task"
           example: masterdev123
+          readOnly: true
         version:
           type: integer
           format: int64
@@ -248,12 +255,11 @@ components:
         status:
           type: integer
           format: int32
-          description: HTTP status code
-          example: 404
+          description: HTTP error status code
         message:
           type: string
           description: Error message
-          example: "Task not found with id: 507f1f77bcf86cd799439011"
+          example: An error message describing what went wrong
         timestamp:
           type: string
           format: date-time
